--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Кликер-игра</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>Кликни по кнопке!</h1>
+    <p>Время: <span id="time">10</span> сек</p>
+    <p>Счёт: <span id="score">0</span></p>
+    <button id="clickBtn">Кликни меня!</button>
+    <p id="message"></p>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
